# elastic-semantic-search

./: .env.example  Dockerfile  LICENSE  README.md  cmd.run.all-cuda.sh  cmd.run.all.sh  cmd.run.clean.sh  cmd.run.core.sh  cmd.stop.all.sh  docker-compose.yml  pyproject.toml
src/: app.py  cache_model.py  index_es.py  start_be.py
src/templates/: index.html
src/utils/: elasticsearch.py  es_service.py  loadmodel.py  vectorize.py
